@@ -1,5 +1,10 @@
 2011-04-09  Ivan Maidanski  <ivmai@mail.ru>
 
+	* mallocx.c (GC_malloc_uncollectable): Move to malloc.c (since
+	it is used internally in some places).
+
+2011-04-09  Ivan Maidanski  <ivmai@mail.ru>
+
 	* dbg_mlc.c (GC_register_finalizer_no_order): Remove redundant
 	declaration.
 	* dbg_mlc.c (GC_debug_malloc_replacement,
